[package]
name = "at-api-rs"
version = "0.1.0"
edition = "2018"
authors = ["David Cole <david.cole1340@gmail.com>"]
repository = "https://github.com/davidcole1340/at-api-rs"
description = "Wrapper for the Auckland Transport API."
license = "MIT or Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }

